<resources>
    <string name="app_name">YouBike</string>
    <string name="phone">手機號碼</string>
    <string name="password">密碼</string>
    <string name="password_confirm">確認密碼</string>
    <string name="forget_pass">忘記密碼</string>
    <string name="signup">註冊會員</string>
    <string name="login">登入</string>
    <string name="disagree">不同意</string>
    <string name="agree">同意</string>
    <string name="self_id">證件號</string>
    <string name="birth">生日</string>
    <string name="mail">電子信箱</string>
    <string name="signup_confirm">註冊</string>
    <string name="termofuse_title">會員條款</string>
    <string name="card_manage">卡片管理</string>
    <string name="card_type">卡片類型</string>
    <string name="card_new">卡片新增</string>
    <string name="easy_card">悠遊卡</string>
    <string name="ipass">一卡通</string>
    <string name="card_type_notice">欲使用掃碼租車，請新增[掃碼綁定卡]，並選擇支付工具</string>


    <string name="termofuse">臺北市公共自行車租賃系統 YouBike 會員定型化契約條款
服務內容
YouBike 是由微笑單車股份有限公司（以下簡稱「本公司」）經設站地點所在縣市機關授權，
所提供之自動化甲地租借乙地還車之公共自行車租賃服務（以下簡稱「本服務」）。除會員
所註冊之該縣市公共自行車租賃服務之外，會員亦可在本公司同意之其他地區相容系統使
用本服務。
第一條、 名詞定義
（一） 會員：指於 YouBike 官方網站、服務中心、Kiosk(自動服務機)、APP 等完成註冊
程序者。
（二） 租車：指會員於本公司有提供本服務之公共自行車站點，使用合格之電子票證，
租借公共自行車使用之謂。
（三） 還車：指會員將公共自行車歸還於本公司有提供本服務之公共自行車站點，並使
用合格之電子票證完成扣款繳費之謂。
（四） 單次使用者：指非屬會員而使用信用卡進行單次借還公共自行車之人。
第二條、 個資規範
（一） 個人資料蒐集類別
1. 依「個人資料保護法」規定，會員為使用本服務提供本公司之個人資料類別包括：姓
名、行動電話、電子郵件地址、信用卡號碼及電子票證號碼。
2. 個人資料如有登錄不實、不完整或錯誤者，本公司得暫停或終止會員使用本服務之全
部或一部。
（二） 個人資料蒐集目的
依「個人資料保護法之特定目的及個人資料之類別」，會員的個人資料將使用目的包
括：(069)契約、類似契約或其他法律關係事務、(063)非公務機關依法定義務所進行
個人資料之蒐集處理及利用、(090)消費者、客戶管理與服務、(135)資（通）訊服務、
(136)資（通）訊與資料庫管理、(137)資通安全與管理、(157)調查、統計與研究分
析、(181) 其他經營合於營業登記項目或組織章程所定之業務。
（三） 個人資料使用期限
1. 特定目的存續期間。
2. 依相關法令規定或本公司執行業務所必須訂之，並以期限較長者為準。
（四） 個人資料使用地區：台灣地區
（五） 個人資料使用範圍
會員之個人資料，將依前項蒐集目的範圍內，供本公司、主管機關、關係企業及合作
夥伴內部使用。
（六） 個人資料之查詢、閱覽及刪除：
除法令另有規定外，會員得向本公司：
1. 查詢或請求閱覽其個人資料。
2. 請求製給其個人資料之複製本。
3. 請求補充或更正其個人資料。
4. 請求停止蒐集、利用或處理其個人資料。
5. 請求刪除其個人資料。
第三條、 電子票證使用
會員於完成本服務之註冊程序後，應負責維持電子票證及其電子錢包的機密安全，並
同意以下事項：
（一） 不得以竊盜、冒用等不當手法取得電子票證號碼。
（二） 電子票證或其電子錢包遭到盜用或發生其他任何安全問題時，將立即通知本公司。
（三） 於還車將公共自行車停回本服務系統之停車柱，並完成扣款繳費。
第四條、 兒童及青少年等保護
依民法規定屬無行為能力、限制行為能力或受輔助宣告之會員，應經法定代理人、輔
助人閱讀、瞭解並同意本服務條款之所有內容後，方得使用本服務。前開會員於使用
本服務時，本公司即推定會員之法定代理人、輔助人已閱讀、瞭解並同意接受本服務
條款之約束。
第五條、 使用服務及騎乘注意事項
（一） 經完成註冊而成為會員者，僅屬取得使用本服務之資格，本公司不保證會員可隨
時租車與還車。如因此致生之任何損害，均與本公司無涉。會員於欲終止租借卻
無車位可歸還時，可使用該站 Kiosk 之滿站增時功能，即可取得免費使用時間，
至鄰近站點還車或於該站等候。
（二） 會員有效使用期限自註冊完成之日起，至本服務條款第六條規定之事由成就或本
服務經主管機關命本公司終止提供服務之日止。
（三） 本服務所提供之自行車，僅適於身高 140 公分至 190 公分間之人使用，超出或未
達於此身高限制之人不得租車使用，如因此致生損害者，本公司不負任何賠償責
任。
（四） 會員不得以任何非法目的或以任何非法方式使用本服務，應遵守中華民國相關法
規及道路騎乘之慣例，在秉持尊重路權，相互禮讓之前提下騎乘，並依以下原則
使用本服務：
1. 應確保自身安全騎乘之條件，會員於精神狀態及體能條件不足以安全順利騎乘
時，應避免租借或停止租借。
2. 遵守「道路交通管理處罰條例」第三章慢車、「道路交通安全規則」第五章慢車
規定。
3. 遵守道路交通標誌、標線、號誌之指示，並服從執行交通勤務警察之指揮。
4. 留意騎乘腳踏車時不應侵入快車道行駛，不得在禁止穿越地段穿越道路。
5. 騎乘時，應保持環境警覺，注意路況並維持適當行車安全距離。
6. 煞車操作先煞後輪減速後，再煞前輪，儘量避免緊急煞車，以保持騎乘舒適及
安全。
7. 於雨天路面濕滑及下坡之情形下，放慢行車速度。
8. 行駛時，不爭先、爭道、並行競駛或以其他危險方式駕駛。
9. 超車時，應在慢車道可容超越前車之處，使得沿車左邊超越，再駛入原行路線。
10. 會員不得利用本服務從事侵害他人權益或違法之行為，並配合公平使用租賃原
則，不以投機方式連續或長期佔用，造成其他使用者的不便。
11. 本服務屬無人化管理，會員於租車前應依租賃站點張貼之說明及指示，檢查自
行車是否可正常使用，若有異常者，應避免租借；租借後五分鐘內發現自行車
有故障或異常情事者，應立即於原租賃站還車或連絡客服人員(客服電話：
02-89785511)尋求協助，本公司就該次租賃不予收費。
（五） 會員於租借期間不慎將自行車遺失者，除有不能向警察機關報案之情形外，應盡
速就近向警察機關完成報案程序，並將報案證明提供與本公司，及支付自租車起
至遺失時間（依報案證明所載）之租借費用，租賃關係始即終止。因可歸責於會
員或本服務條款第十條第（三）項所指第三人之事由，且該自行車自遺失日起逾
三個月未尋回者，會員應賠償本公司新台幣 9,000 元整。如嗣後車輛尋回並歸還
予本公司者，本公司將以會員已賠償之金額為限、扣除車輛必要之維護檢修費用
後，無息返還會員剩餘金額。
（六） 會員應以電子票證支付租金。會員應持已註冊開卡之電子票證，至本服務之停車
柱感應取車。一張電子票證對一車，不得重複取車。單次使用者應以信用卡支付
租金，並依 Kiosk 指示程序進行借車與還車程序。本自行車僅限單人騎乘，不得
搭載乘客或超載，亦不得載送下列物品：
1. 違禁品。
2. 危險品。
3. 不潔或易污損自行車之物品。
4. 不適宜隨車之動物。
5. 影響騎乘安全之物品。
（七） 非經本公司事前書面同意，會員不得將自行車使用於行銷、廣告、宣傳、影劇拍
攝、產品展示等商業性或非商業性之用途。
（八） 會員於租賃期間應負擔所租借車輛之一切交通違規罰鍰及處分，如經本公司代為
繳納或履行者，會員應對本公司負損害賠償之責；如自行車遭拖吊者，其相關保
管租金、罰鍰、規費等，應由會員負擔。
（九） 自行車發生擦撞或毀損致會員或第三人身體傷亡或財物損失時，除有不能向警察
機關報案之情形外，會員應立即報案並通知本公司後，租賃關係即為終止。事故
原因可歸責於會員時，會員應負擔法律及賠償責任。因可歸責於會員之事由致本
自行車毀損者，會員應負賠償責任。
（十） 使用本服務期間如發生交通事故時，應立即撥打 110 報警及通知本公司，並為拍
照存證、移置車輛等必要處置，以免阻礙交通及再次發生事故。如有傷亡情事，
請立即撥打 119 尋求協助。因該事故所生之救援費、修理費、自行車修理期間之
租金，及造成第三人之一切損害，應由會員負擔之。
（十一） 會員使用本自行車應盡善良管理人注意義務保管之責，禁止出賣、質押、典當
或自行修護等行為。遺失期間之自行車，由本公司進行協尋公示，其所有權仍
歸本公司，經尋獲者亦同。
（十二） 會員如遺失隨車鎖之鑰匙，除應立即通知本公司外，並應賠償隨車鎖鑰匙之工
本費新台幣 200 元整。
（十三） 本公司就本服務已投保以下險種，不提供個人傷害保險，會員如有相關需求，
應自行投保。
1. 產品責任險：投保金額美金五百萬元整。
2. 公共意外責任險：投保金額新台幣二千四百萬元整。
第六條、 扣款辦法及費率
（一） 依會員所騎乘地區之各官方網站（http://www.youbike.com.tw/）公告為準。
（二） 本服務除目前臺北市、新北市、桃園市之 YouBike 可跨市借還外，其餘縣市暫不
開放跨縣市借還車，如有跨縣市借還者，將收取調度運輸等相關費用，詳細作法
以官方網站（http://www.youbike.com.tw）公告為準。
第七條、 服務變更、終止、暫停或中斷
（一） 本公司保留依法及按主管機關命令而變更服務內容之權利。
（二） 會員如違反中華民國法律、本服務條款規定者，本公司得逕行終止或暫停會員使
用本服務之權限；如因此致本公司受有損害者，會員應負擔損害賠償責任。
（三） 本公司於接獲會員本人、代理人或受託人之通知、或經政府機關之命令、或依相
關法規規定、或會員連續二年以上未使用本服務者，本公司得終止會員帳號權限，
並得刪除帳號相關資料及交易紀錄。
（四） 會員不得將會員資格轉讓予第三人。
第八條、 廣告
會員在本服務中瀏覽到的所有廣告內容、文字與圖片之說明、展示樣品或其他銷售資
訊，除本公司明知或可得而知該廣告有不實之情事而仍為刊登者外，本公司不為此負
擔任何賠償責任。
第九條、 智慧財產權
（一） 本公司所使用之硬體、軟體或程式、網站及 Kiosk 上所有內容，包括但不限於著
作、圖片、檔案、資訊、資料、網站架構、網站畫面的安排、網頁設計，均由本
公司或其他權利人依法擁有其智慧財產權，包括但不限於商標權、專利權、著作
權、營業秘密與專有技術等。任何人不得逕自使用、修改、重製、公開播送、改
作、散布、發行、公開發表、進行還原工程、解編或反向組譯。
（二） 會員欲引用或轉載前項所載內容，應依法取得本公司或其他權利人事前書面同
意。如有違反，會員應依法負損害賠償責任。
（三） 本公司及其關係企業為行銷宣傳本服務，就本服務相關之商品或服務名稱、圖樣、
呈現等（以下稱「YouBike 商標」），依其註冊或使用之狀態，受商標法及公平交
易法等相關法律之保護，未經本公司事前書面同意，任何人不得基於營利目的使
用「YouBike 商標」。
第十條、 服務條款效力
（一） 會員於使用本服務時，即視為會員已閱讀、瞭解並同意接受本服務條款之全部內
容。
（二） 非屬完全行為能力人之會員，除應經法定代理人或監護人閱讀、瞭解並同意本服
務條款之所有內容後，始得使用本服務外，亦有前項之適用。
（三） 會員如將完成註冊之電子票證或本服務提供之自行車，借、讓予第三人使用者，
除應擔保該第三人知悉、同意本服務條款之內容外，並應與該第三人就本服務條
款所生之義務負連帶責任。
（四） 依本服務條款所載之會員權利義務，除電子票證之使用規範外，單次使用者均準
用之。
第十一條、 條款增訂、修改及終止
本服務條款如有增訂、修改或終止者，本公司將於本服務之網站及 APP 公告，並以適
當方式通知之。
第十二條、 準據法及管轄法院
（一） 本服務條款之解釋與適用，以及與本服務條款有關之爭議，悉依中華民國法律適
用辦理，並以臺灣臺北地方法院為第一審管轄法院。
（二） 本公司未行使或執行本服務條款任何權利或規定，不構成前開權利或規定之棄
權。若任何本服務條款規定，經有管轄權之法院認定無效者，其餘部分仍應存續
且有效。
第十三條、 出租人資訊
（一） 出租人名稱：微笑單車股份有限公司
（二） 負責人：劉金標
（三） 聯絡地址：臺北市信義區基隆路二段 51 號 17 樓之 2
（四） 服務電話：臺北/02-89785511、新北/02-89785522
（五） 臺北市公共自行車租賃系統 YouBike 服務使用注意事項。（連結到
http://taipei.youbike.com.tw/taipei/photos/docs/13c2add0eca14eba6b76c
d59c79cd00e.pdf）</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps_youbike">MapsActivity_Youbike</string>
    <string name="button_msg">確定</string>
    <string name="app_text">請選擇區域</string>
    <string name="region_taipei">臺北市</string>
    <string name="region_newtaipei">新北市</string>
    <string name="region_taouain">桃園市</string>
    <string name="region_hsinchu">新竹市</string>
    <string name="region_hsinchuscience">新竹科學園區</string>
    <string name="region_miaoli">苗栗縣</string>
    <string name="region_taichung">臺中市</string>
    <string name="button_mng_cancel">取消</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="map">站點地圖</string>
    <string name="regionChoose">區域切換</string>
    <string name="ServiceCenter">服務中心</string>
    <string name="Instructions">使用說明</string>
    <string name="LostAndFound">失物招領</string>
    <string name="FindBikes">Youbike協尋</string>
    <string name="CardManage">卡片管理</string>
    <string name="RideTicket">騎乘券管理</string>
    <string name="Payment">補繳款項</string>
</resources>