<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/menu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:src="@mipmap/img_1"
        app:tint="@android:color/holo_orange_dark" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_centerVertical="true"
        android:src="@drawable/login_bike" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/img_4"
            app:tint="@android:color/holo_orange_dark" />

        <EditText
            android:id="@+id/et_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingHorizontal="12dp"
            android:lines="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_phrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:textAlignment="textEnd"
        android:textColor="#FF0000"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/img_3"
            app:tint="@android:color/holo_orange_dark" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/self_id"
            android:minHeight="48dp"
            android:paddingHorizontal="12dp"
            android:inputType="textCapSentences"
            android:lines="1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_idrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:textAlignment="textEnd"
        android:textColor="#FF0000"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/birth"
            app:tint="@android:color/holo_orange_dark" />

        <EditText
            android:id="@+id/et_bd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth"
            android:inputType="none"
            android:minHeight="48dp"
            android:paddingHorizontal="12dp"
            tools:ignore="Deprecated" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_bdrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:textAlignment="textEnd"
        android:textColor="#FF0000"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/password_icon"
            app:tint="@android:color/holo_orange_dark" />

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:paddingHorizontal="12dp"
            android:inputType="textPassword"
            android:lines="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_pwrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:textAlignment="textEnd"
        android:textColor="#FF0000"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/password_icon"
            app:tint="@android:color/holo_orange_dark" />

        <EditText
            android:id="@+id/et_cpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirm"
            android:minHeight="48dp"
            android:paddingHorizontal="12dp"
            android:inputType="textPassword"
            android:lines="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cpwrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:textAlignment="textEnd"
        android:textColor="#FF0000"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="30dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/mail"
            app:tint="@android:color/holo_orange_dark" />

        <EditText
            android:id="@+id/et_em"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:minHeight="48dp"
            android:paddingHorizontal="12dp"
            android:lines="1"/>
    </LinearLayout>


<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="170dp"-->
<!--        android:text="@string/forget_pass"-->
<!--        android:textColor="@color/holo_orange_dark"-->
<!--        android:textSize="23sp" />-->

    <Button
        android:id="@+id/signup_button"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/holo_orange_dark"
        android:text="@string/signup_confirm"
        android:textColor="@color/white"
        android:textSize="23dp" />



</LinearLayout>