<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/menu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:src="@mipmap/img_1"
        app:tint="@android:color/holo_orange_dark" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_centerVertical="true"
        android:src="@drawable/login_bike" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="30dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/img_4"
            app:tint="@android:color/holo_orange_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:minHeight="48dp"
            android:paddingHorizontal="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="30dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/password_icon"
            app:tint="@android:color/holo_orange_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:paddingHorizontal="12dp" />
    </LinearLayout>

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="170dp"-->
<!--        android:text="@string/forget_pass"-->
<!--        android:textColor="@color/holo_orange_dark"-->
<!--        android:textSize="23sp" />-->

    <Button
        android:id="@+id/login_button"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/holo_orange_dark"
        android:text="登入"
        android:textSize="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:text="@string/signup"
        android:textColor="@color/holo_orange_dark"
        android:textSize="23sp" />

</LinearLayout>