<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/term_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:gravity="bottom"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:src="@mipmap/img_1"
            app:tint="@android:color/holo_orange_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@+id/menu"
            android:text="@string/termofuse_title"
            android:textColor="#333333"
            android:textSize="23sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#E7E7E7" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/term_title"
        android:layout_above="@+id/term_bottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:text="臺北市公共自行車租賃系統YouBike會員定型化契約條款\n
服務內容\n
YouBike是由微笑單車股份有限公司（以下簡稱「本公司」）經設站地點所在縣市機關授權，\n
所提供之自動化甲地租借乙地還車之公共自行車租賃服務（以下簡稱「本服務」）。除會員\n
所註冊之該縣市公共自行車租賃服務之外，會員亦可在本公司同意之其他地區相容系統使\n
用本服務。\n
第一條、名詞定義\n
（一）會員：指於YouBike官方網站、服務中心、Kiosk(自動服務機)、APP等完成註冊\n
程序者。\n
（二）租車：指會員於本公司有提供本服務之公共自行車站點，使用合格之電子票證，\n
租借公共自行車使用之謂。\n
（三）還車：指會員將公共自行車歸還於本公司有提供本服務之公共自行車站點，並使\n
用合格之電子票證完成扣款繳費之謂。\n
（四）單次使用者：指非屬會員而使用信用卡進行單次借還公共自行車之人。\n
第二條、個資規範\n
（一）個人資料蒐集類別\n
1.依「個人資料保護法」規定，會員為使用本服務提供本公司之個人資料類別包括：姓\n
名、行動電話、電子郵件地址、信用卡號碼及電子票證號碼。\n
2.個人資料如有登錄不實、不完整或錯誤者，本公司得暫停或終止會員使用本服務之全\n
部或一部。\n
（二）個人資料蒐集目的\n
依「個人資料保護法之特定目的及個人資料之類別」，會員的個人資料將使用目的包\n
括：(069)契約、類似契約或其他法律關係事務、(063)非公務機關依法定義務所進行\n
個人資料之蒐集處理及利用、(090)消費者、客戶管理與服務、(135)資（通）訊服務、\n
(136)資（通）訊與資料庫管理、(137)資通安全與管理、(157)調查、統計與研究分\n
析、(181)其他經營合於營業登記項目或組織章程所定之業務。\n
（三）個人資料使用期限\n
1.特定目的存續期間。\n
2.依相關法令規定或本公司執行業務所必須訂之，並以期限較長者為準。\n
（四）個人資料使用地區：台灣地區\n
（五）個人資料使用範圍\n
會員之個人資料，將依前項蒐集目的範圍內，供本公司、主管機關、關係企業及合作\n
夥伴內部使用。\n
（六）個人資料之查詢、閱覽及刪除：\n
除法令另有規定外，會員得向本公司：\n
1.查詢或請求閱覽其個人資料。\n
2.請求製給其個人資料之複製本。\n
3.請求補充或更正其個人資料。\n
4.請求停止蒐集、利用或處理其個人資料。\n
5.請求刪除其個人資料。\n
第三條、電子票證使用\n
會員於完成本服務之註冊程序後，應負責維持電子票證及其電子錢包的機密安全，並\n
同意以下事項：\n
（一）不得以竊盜、冒用等不當手法取得電子票證號碼。\n
（二）電子票證或其電子錢包遭到盜用或發生其他任何安全問題時，將立即通知本公司。\n
（三）於還車將公共自行車停回本服務系統之停車柱，並完成扣款繳費。\n
第四條、兒童及青少年等保護\n
依民法規定屬無行為能力、限制行為能力或受輔助宣告之會員，應經法定代理人、輔\n
助人閱讀、瞭解並同意本服務條款之所有內容後，方得使用本服務。前開會員於使用\n
本服務時，本公司即推定會員之法定代理人、輔助人已閱讀、瞭解並同意接受本服務\n
條款之約束。\n
第五條、使用服務及騎乘注意事項\n
（一）經完成註冊而成為會員者，僅屬取得使用本服務之資格，本公司不保證會員可隨\n
時租車與還車。如因此致生之任何損害，均與本公司無涉。會員於欲終止租借卻\n
無車位可歸還時，可使用該站Kiosk之滿站增時功能，即可取得免費使用時間，\n
至鄰近站點還車或於該站等候。\n
（二）會員有效使用期限自註冊完成之日起，至本服務條款第六條規定之事由成就或本\n
服務經主管機關命本公司終止提供服務之日止。\n
（三）本服務所提供之自行車，僅適於身高140公分至190公分間之人使用，超出或未\n
達於此身高限制之人不得租車使用，如因此致生損害者，本公司不負任何賠償責\n
任。\n
（四）會員不得以任何非法目的或以任何非法方式使用本服務，應遵守中華民國相關法\n
規及道路騎乘之慣例，在秉持尊重路權，相互禮讓之前提下騎乘，並依以下原則\n
使用本服務：\n
1.應確保自身安全騎乘之條件，會員於精神狀態及體能條件不足以安全順利騎乘\n
時，應避免租借或停止租借。\n
2.遵守「道路交通管理處罰條例」第三章慢車、「道路交通安全規則」第五章慢車\n
規定。\n
3.遵守道路交通標誌、標線、號誌之指示，並服從執行交通勤務警察之指揮。\n
4.留意騎乘腳踏車時不應侵入快車道行駛，不得在禁止穿越地段穿越道路。\n
5.騎乘時，應保持環境警覺，注意路況並維持適當行車安全距離。\n
6.煞車操作先煞後輪減速後，再煞前輪，儘量避免緊急煞車，以保持騎乘舒適及\n
安全。\n
7.於雨天路面濕滑及下坡之情形下，放慢行車速度。\n
8.行駛時，不爭先、爭道、並行競駛或以其他危險方式駕駛。\n
9.超車時，應在慢車道可容超越前車之處，使得沿車左邊超越，再駛入原行路線。\n
10.會員不得利用本服務從事侵害他人權益或違法之行為，並配合公平使用租賃原\n
則，不以投機方式連續或長期佔用，造成其他使用者的不便。\n
11.本服務屬無人化管理，會員於租車前應依租賃站點張貼之說明及指示，檢查自\n
行車是否可正常使用，若有異常者，應避免租借；租借後五分鐘內發現自行車\n
有故障或異常情事者，應立即於原租賃站還車或連絡客服人員(客服電話：\n
02-89785511)尋求協助，本公司就該次租賃不予收費。\n
（五）會員於租借期間不慎將自行車遺失者，除有不能向警察機關報案之情形外，應盡\n
速就近向警察機關完成報案程序，並將報案證明提供與本公司，及支付自租車起\n
至遺失時間（依報案證明所載）之租借費用，租賃關係始即終止。因可歸責於會\n
員或本服務條款第十條第（三）項所指第三人之事由，且該自行車自遺失日起逾\n
三個月未尋回者，會員應賠償本公司新台幣9,000元整。如嗣後車輛尋回並歸還\n
予本公司者，本公司將以會員已賠償之金額為限、扣除車輛必要之維護檢修費用\n
後，無息返還會員剩餘金額。\n
（六）會員應以電子票證支付租金。會員應持已註冊開卡之電子票證，至本服務之停車\n
柱感應取車。一張電子票證對一車，不得重複取車。單次使用者應以信用卡支付\n
租金，並依Kiosk指示程序進行借車與還車程序。本自行車僅限單人騎乘，不得\n
搭載乘客或超載，亦不得載送下列物品：\n
1.違禁品。\n
2.危險品。\n
3.不潔或易污損自行車之物品。\n
4.不適宜隨車之動物。\n
5.影響騎乘安全之物品。\n
（七）非經本公司事前書面同意，會員不得將自行車使用於行銷、廣告、宣傳、影劇拍\n
攝、產品展示等商業性或非商業性之用途。\n
（八）會員於租賃期間應負擔所租借車輛之一切交通違規罰鍰及處分，如經本公司代為\n
繳納或履行者，會員應對本公司負損害賠償之責；如自行車遭拖吊者，其相關保\n
管租金、罰鍰、規費等，應由會員負擔。\n
（九）自行車發生擦撞或毀損致會員或第三人身體傷亡或財物損失時，除有不能向警察\n
機關報案之情形外，會員應立即報案並通知本公司後，租賃關係即為終止。事故\n
原因可歸責於會員時，會員應負擔法律及賠償責任。因可歸責於會員之事由致本\n
自行車毀損者，會員應負賠償責任。\n
（十）使用本服務期間如發生交通事故時，應立即撥打110報警及通知本公司，並為拍\n
照存證、移置車輛等必要處置，以免阻礙交通及再次發生事故。如有傷亡情事，\n
請立即撥打119尋求協助。因該事故所生之救援費、修理費、自行車修理期間之\n
租金，及造成第三人之一切損害，應由會員負擔之。\n
（十一）會員使用本自行車應盡善良管理人注意義務保管之責，禁止出賣、質押、典當\n
或自行修護等行為。遺失期間之自行車，由本公司進行協尋公示，其所有權仍\n
歸本公司，經尋獲者亦同。\n
（十二）會員如遺失隨車鎖之鑰匙，除應立即通知本公司外，並應賠償隨車鎖鑰匙之工\n
本費新台幣200元整。\n
（十三）本公司就本服務已投保以下險種，不提供個人傷害保險，會員如有相關需求，\n
應自行投保。\n
1.產品責任險：投保金額美金五百萬元整。\n
2.公共意外責任險：投保金額新台幣二千四百萬元整。\n
第六條、扣款辦法及費率\n
（一）依會員所騎乘地區之各官方網站（http://www.youbike.com.tw/）公告為準。\n
（二）本服務除目前臺北市、新北市、桃園市之YouBike可跨市借還外，其餘縣市暫不\n
開放跨縣市借還車，如有跨縣市借還者，將收取調度運輸等相關費用，詳細作法\n
以官方網站（http://www.youbike.com.tw）公告為準。\n
第七條、服務變更、終止、暫停或中斷\n
（一）本公司保留依法及按主管機關命令而變更服務內容之權利。\n
（二）會員如違反中華民國法律、本服務條款規定者，本公司得逕行終止或暫停會員使\n
用本服務之權限；如因此致本公司受有損害者，會員應負擔損害賠償責任。\n
（三）本公司於接獲會員本人、代理人或受託人之通知、或經政府機關之命令、或依相\n
關法規規定、或會員連續二年以上未使用本服務者，本公司得終止會員帳號權限，\n
並得刪除帳號相關資料及交易紀錄。\n
（四）會員不得將會員資格轉讓予第三人。\n
第八條、廣告\n
會員在本服務中瀏覽到的所有廣告內容、文字與圖片之說明、展示樣品或其他銷售資\n
訊，除本公司明知或可得而知該廣告有不實之情事而仍為刊登者外，本公司不為此負\n
擔任何賠償責任。\n
第九條、智慧財產權\n
（一）本公司所使用之硬體、軟體或程式、網站及Kiosk上所有內容，包括但不限於著\n
作、圖片、檔案、資訊、資料、網站架構、網站畫面的安排、網頁設計，均由本\n
公司或其他權利人依法擁有其智慧財產權，包括但不限於商標權、專利權、著作\n
權、營業秘密與專有技術等。任何人不得逕自使用、修改、重製、公開播送、改\n
作、散布、發行、公開發表、進行還原工程、解編或反向組譯。\n
（二）會員欲引用或轉載前項所載內容，應依法取得本公司或其他權利人事前書面同\n
意。如有違反，會員應依法負損害賠償責任。\n
（三）本公司及其關係企業為行銷宣傳本服務，就本服務相關之商品或服務名稱、圖樣、\n
呈現等（以下稱「YouBike商標」），依其註冊或使用之狀態，受商標法及公平交\n
易法等相關法律之保護，未經本公司事前書面同意，任何人不得基於營利目的使\n
用「YouBike商標」。\n
第十條、服務條款效力\n
（一）會員於使用本服務時，即視為會員已閱讀、瞭解並同意接受本服務條款之全部內\n
容。\n
（二）非屬完全行為能力人之會員，除應經法定代理人或監護人閱讀、瞭解並同意本服\n
務條款之所有內容後，始得使用本服務外，亦有前項之適用。\n
（三）會員如將完成註冊之電子票證或本服務提供之自行車，借、讓予第三人使用者，\n
除應擔保該第三人知悉、同意本服務條款之內容外，並應與該第三人就本服務條\n
款所生之義務負連帶責任。\n
（四）依本服務條款所載之會員權利義務，除電子票證之使用規範外，單次使用者均準\n
用之。\n
第十一條、條款增訂、修改及終止\n
本服務條款如有增訂、修改或終止者，本公司將於本服務之網站及APP公告，並以適\n
當方式通知之。\n
第十二條、準據法及管轄法院\n
（一）本服務條款之解釋與適用，以及與本服務條款有關之爭議，悉依中華民國法律適\n
用辦理，並以臺灣臺北地方法院為第一審管轄法院。\n
（二）本公司未行使或執行本服務條款任何權利或規定，不構成前開權利或規定之棄\n
權。若任何本服務條款規定，經有管轄權之法院認定無效者，其餘部分仍應存續\n
且有效。\n
第十三條、出租人資訊\n
（一）出租人名稱：微笑單車股份有限公司\n
（二）負責人：劉金標\n
（三）聯絡地址：臺北市信義區基隆路二段51號17樓之2\n
（四）服務電話：臺北/02-89785511、新北/02-89785522\n
（五）臺北市公共自行車租賃系統YouBike服務使用注意事項。（連結到\n
http://taipei.youbike.com.tw/taipei/photos/docs/13c2add0eca14eba6b76c\n
d59c79cd00e.pdf）
" />

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/term_bottom"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="11dp"
            android:backgroundTint="@color/holo_orange_dark"
            android:text="@string/disagree"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"

            android:layout_gravity="end"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="11dp"
            android:layout_toEndOf="@+id/disagree"
            android:backgroundTint="@color/holo_orange_dark"
            android:text="@string/agree"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>